Bug 1151071 - Make sure low-resolution tiles are transparent. r=mattwoodrow