gfx/layers/client/TiledContentClient.cpp
@@ -318,23 +318,31 @@ ClientTiledLayerBuffer::GetContentType(SurfaceMode* aMode) const
 
   if (mode == SurfaceMode::SURFACE_COMPONENT_ALPHA) {
 #if defined(MOZ_GFX_OPTIMIZE_MOBILE) || defined(MOZ_WIDGET_GONK)
-     mode = SurfaceMode::SURFACE_SINGLE_CHANNEL_ALPHA;
-  }
+    mode = SurfaceMode::SURFACE_SINGLE_CHANNEL_ALPHA;
 #else
-      if (!mPaintedLayer->GetParent() ||
-          !mPaintedLayer->GetParent()->SupportsComponentAlphaChildren() ||
-          !gfxPrefs::TiledDrawTargetEnabled()) {
-        mode = SurfaceMode::SURFACE_SINGLE_CHANNEL_ALPHA;
-      } else {
-        content = gfxContentType::COLOR;
-      }
+    if (!mPaintedLayer->GetParent() ||
+        !mPaintedLayer->GetParent()->SupportsComponentAlphaChildren() ||
+        !gfxPrefs::TiledDrawTargetEnabled()) {
+      mode = SurfaceMode::SURFACE_SINGLE_CHANNEL_ALPHA;
+    } else {
+      content = gfxContentType::COLOR;
+    }
+#endif
   } else if (mode == SurfaceMode::SURFACE_OPAQUE) {
+#if defined(MOZ_GFX_OPTIMIZE_MOBILE) || defined(MOZ_WIDGET_GONK)
+    if (mResolution != 1) {
+      // If we're in low-res mode, drawing can sample from outside the visible
+      // region. Make sure that we only sample transparency if that happens.
+      mode = SurfaceMode::SURFACE_SINGLE_CHANNEL_ALPHA;
+      content = gfxContentType::COLOR_ALPHA;
+    }
+#else
     if (mPaintedLayer->MayResample()) {
       mode = SurfaceMode::SURFACE_SINGLE_CHANNEL_ALPHA;
       content = gfxContentType::COLOR_ALPHA;
     }
-  }
 #endif
+  }
 
   if (aMode) {
     *aMode = mode;
